@@ -1,7 +1,7 @@
 /*
  * %kadu copyright begin%
  * Copyright 2010, 2010, 2011 Piotr Galiszewski (piotr.galiszewski@kadu.im)
- * Copyright 2010 Piotr Dąbrowski (ultr@ultr.pl)
+ * Copyright 2010, 2012 Piotr Dąbrowski (ultr@ultr.pl)
  * Copyright 2010, 2011 Rafał Malinowski (rafal.przemyslaw.malinowski@gmail.com)
  * Copyright 2011 Bartosz Brachaczek (b.brachaczek@gmail.com)
  * %kadu copyright end%
@@ -110,8 +110,7 @@ ContactSet BuddyPreferredManager::preferredContacts(const BuddySet &buddies)
 
 	ContactSet contacts;
 	foreach (const Buddy &buddy, buddies)
-		// it is common account, so each buddy has at least one contact in this account
-		contacts.insert(buddy.contacts(commonAccount).at(0));
+		contacts.insert(preferredContact(buddy, commonAccount));
 
 	return contacts;
 }
