@@ -1,4 +1,5 @@
 ﻿+++ version 0.12.0-beta2
+* core: #2403 fixed: start conference with preferred contacts of each buddy instead of first ones (ultr)
 
 +++ version 0.12.0-beta1
 * tabs: "Close all tabs but active one" action added (Juzef)
